<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mercadito.ui.home.HomeFragment"
        android:label="@string/fragment_home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shoplist"
        android:name="com.example.mercadito.ui.home.ShopListFragment"
        android:label="@string/fragment_shoplist_title"
        tools:layout="@layout/fragment_shoplist" />

    <fragment
        android:id="@+id/navigation_historic"
        android:name="com.example.mercadito.ui.home.HistoricFragment"
        android:label="@string/fragment_historic_title"
        tools:layout="@layout/fragment_historic" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.mercadito.ui.home.CategoriesFragment"
        android:label="@string/fragment_categories_title"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.mercadito.ui.home.UserFragment"
        android:label="@string/fragment_login_title"
        tools:layout="@layout/fragment_user" />

</navigation>