<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/soft_grey">

    <!-- Imagen alusiva al login -->
    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="@dimen/fragment_login_icon_size"
        android:layout_height="@dimen/fragment_login_icon_size"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile"
        android:layout_marginTop="@dimen/fragment_login_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Campo de texto para el usuario -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_login_margin_top"
        android:layout_margin="@dimen/fragment_login_margin"
        android:padding="@dimen/fragment_login_padding"
        android:hint="@string/fragment_login_user_editText"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogin"/>

    <!-- Campo de texto para la contraseña -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_login_margin"
        android:padding="@dimen/fragment_login_padding"
        android:hint="@string/fragment_password_user_editText"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"/>

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/fragment_login_margin_top"
        android:text="@string/fragment_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>